--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -62,14 +62,12 @@
                     android:adjustViewBounds="true"
                     android:src="@drawable/img_main_hub" />
 
-                <!-- Clickable Hotspots -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:weightSum="10">
+                    android:weightSum="13">
 
-                    <!-- Top (big) button -->
                     <View
                         android:id="@+id/btnCalculator"
                         android:layout_width="match_parent"
@@ -77,7 +75,6 @@
                         android:layout_weight="3"
                         android:background="@android:color/transparent" />
 
-                    <!-- Row 1: Skins + Codes -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -100,7 +97,6 @@
                             android:background="@android:color/transparent" />
                     </LinearLayout>
 
-                    <!-- Row 2: Tips + Map -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -123,9 +119,16 @@
                             android:background="@android:color/transparent" />
                     </LinearLayout>
 
-                    <!-- Bottom (big) button -->
                     <View
                         android:id="@+id/btnDailyDiamonds"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="3"
+                        android:background="@android:color/transparent" />
+
+
+                    <View
+                        android:id="@+id/btnSettings"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="3"
