--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/splash_bg"
     android:orientation="vertical"
-    tools:context=".spalsh.A6_StartApp">
+    tools:context=".spalsh.SettingActivity">
 
     <include
         android:id="@+id/toolbarLayout"
@@ -47,59 +47,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/img_setting_image" />
+                    android:src="@drawable/img_setting_list" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:weightSum="3">
 
-                    <!-- Row 1 -->
-                    <LinearLayout
+
+                    <View
+                        android:id="@+id/btnRate"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="@dimen/_5sdp"
                         android:layout_weight="1"
-                        android:orientation="horizontal">
 
-                        <View
-                            android:id="@+id/btnStartApp"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@android:color/transparent" />
+                        android:background="@android:color/transparent" />
 
-
-                    </LinearLayout>
-
-                    <LinearLayout
+                    <View
+                        android:id="@+id/btnShareApp"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="@dimen/_5sdp"
                         android:layout_weight="1"
-                        android:orientation="horizontal">
 
+                        android:background="@android:color/transparent" />
 
-                        <View
-                            android:id="@+id/btnRate"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@android:color/transparent" />
-
-                        <View
-                            android:id="@+id/btnPrivacy"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@android:color/transparent" />
-
-                        <View
-                            android:id="@+id/btnShareApp"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:background="@android:color/transparent" />
-
-                    </LinearLayout>
+                    <View
+                        android:id="@+id/btnPrivacy"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginVertical="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent" />
                 </LinearLayout>
             </FrameLayout>
 
